--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
 title: Brazilian Sign Language Alphabet Dataset 
+logo: 
+description: 
+show_downloads: false
+google_analytics:
 theme: jekyll-theme-leap-day
